--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@vue/vue3-jest": "^29.2.6",
     "axios": "^1.6.7",
+    "babel-jest": "^29.7.0",
     "core-js": "^3.8.3",
+    "jest-environment-jsdom": "^29.7.0",
     "vue": "^3.2.13",
     "vue-i18n": "^9.9.0"
   },
@@ -19,8 +23,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.4",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^29.7.0"
   },
   "eslintConfig": {
     "root": true,
